:bug: Fix weird gap between navbar and content on desktop resolutions

--- a/app/quiz.css
+++ b/app/quiz.css
@@ -35,3 +35,10 @@ div.divider {
 .quiz-answer-box-highlight {
     background-color: lightgray;
 }
+
+@media screen and (min-width: 500px) {
+    .container {
+        padding-left: 0;
+        padding-right: 0;
+    }
+}
